Improved handling of dark/light theme and theme change across background elements and hourly report, fixes to scss vars, improved background readability layer for weather page header

--- a/src/app/components/background/celestialIcons.module.scss
+++ b/src/app/components/background/celestialIcons.module.scss
@@ -1,25 +1,8 @@
-.MuiSlider-track {
-    color: #fff;
-}
-.MuiSlider-thumb {
-    color: #fff;
-}
-.MuiSlider-rail {
-    color: #fff;
-}
 .wrapper {
     box-sizing: content-box;
     width: 100%;
     position: absolute;
     bottom: 0;
-}
-.celestialRail {
-    background-color: #fff;
-    color: #fff;
-}
-.celestialTrack {
-    background-color: #fff;
-    color: #fff;
 }
 .celestialIconWrapper {
     display: flex;
