--- a/src/app/components/background/clouds.module.scss
+++ b/src/app/components/background/clouds.module.scss
@@ -1,5 +1,8 @@
 @use '../../_variables.scss' as *;
 $background: var(--background);
+$accent: var(--accent);
+$text-primary: var(--text-primary);
+$text-secondary: var(--text-secondary);
 .cloudsWrapper {
     --cloudWidth: 9rem;
     --cloudHeigth: 3rem;
@@ -35,12 +38,12 @@ $background: var(--background);
     --delay: 2s;
     --zIndex: 4;
     position: absolute;
-    border-radius: 1.1rem;
+    border-radius: 15% / 50%;
     top: 65%;
     left: -100%;
     height: 3rem;
     width: 9rem;
-    border: 0.2rem solid #fff;
+    border: 0.3rem solid;
     animation: cloudMove 20s linear infinite;
     animation-delay: 3s;
     z-index: var(--zIndex);
@@ -58,7 +61,6 @@ $background: var(--background);
     height: 3rem;
     width: 9rem;
     background: transparent;
-    border: 0.2rem solid #fff;
 }
 .clouds_2 {
     position: absolute;
@@ -68,7 +70,6 @@ $background: var(--background);
     height: 3rem;
     width: 9rem;
     background: transparent;
-    border: 0.2rem solid #fff;
 }
 .clouds_3 {
     position: absolute;
@@ -78,5 +79,4 @@ $background: var(--background);
     height: 3rem;
     width: 9rem;
     background: transparent;
-    border: 0.2rem solid #fff;
 }
