--- a/src/app/components/icons.module.scss
+++ b/src/app/components/icons.module.scss
@@ -1,3 +1,4 @@
+$background: var(--background);
 $simple_icon_bg_color: transparent;
 $icon_border_color: #f8f5f2;
 $color_moon: #fff;
@@ -26,7 +27,7 @@ $size_icon: 7rem;
     width: $size_icon;
     height: $size_icon;
     border-radius: 50%;
-    border: 0.5rem solid $icon_border_color;
+    border: 0.5rem solid var(--text-primary);
     box-shadow: 0 0 1rem $border-color;
     z-index: 3;
     margin: 1rem;
@@ -35,7 +36,7 @@ $size_icon: 7rem;
         position: absolute;
         background-color: transparent;
         border-radius: 50%;
-        border: 0.3rem solid $icon_border_color;
+        border: 0.3rem solid var(--text-primary);
         @include translate_center;
         z-index: 2;
         &:nth-of-type(1) {
@@ -72,19 +73,19 @@ $size_icon: 7rem;
 }
 
 .sunIcon {
-    $border-color: $icon_border_color;
-    $background-color: $simple_icon_bg_color;
+    //$border-color: $icon_border_color;
+    //$background-color: $simple_icon_bg_color;
     $ray_color: black;
     $ray_length: 1rem;
     $ray_offset: 1rem;
     $ray_thickness: 10deg;
     $ray_numbers: 8;
     position: relative;
-    background-color: $background-color;
+    background-color: var(--background);
     width: 4rem;
     height: 4rem;
     border-radius: 50%;
-    border: 0.5rem solid $border-color;
+    border: 0.5rem solid var(--text-primary);
     z-index: 3;
     display: inline-block;
     margin: calc($ray_length + $ray_offset + 10px);
